# pyrsing

./: .gitignore  README.md  pyproject.toml  setup.py
src/pyrsing/: __init__.py  grammar.py  sql.py  tokens.py
tests/: big_select.py  groups.py  small_select.py
